fix: gap to right on items decreased

--- a/src/styles.css
+++ b/src/styles.css
@@ -87,7 +87,7 @@ body {
 
 .list li {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.3rem;
   align-items: center;
 }
 
